# opengl-project

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: Shaders.h  main.cpp
